# aegisml

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT_REPORT.md  LICENSE  Procfile  README.md  SECURITY.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml
.github/ISSUE_TEMPLATE/: new_inspector.yml  threat_report.yml
.github/actions/aegisml-scan/: action.yml
.github/workflows/: example-usage.yml
aegisml/: __init__.py  cli.py  scanner.py
aegisml/inspectors/: __init__.py  base.py  gguf_inspector.py  safetensors_inspector.py  static_inspector.py
apps/web/: auth.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
apps/web/app/badge/[id]/: page.tsx
apps/web/app/compare/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/developer/: page.tsx
apps/web/app/docs/: page.tsx
apps/web/app/profile/: page.tsx
apps/web/app/scan/[id]/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/threats/: page.tsx
apps/web/components/: AIProviderSelector.tsx  AuthButton.tsx  DeveloperConsoleClient.tsx  Navbar.tsx  ScanProgress.tsx  ThreatCard.tsx
apps/web/components/charts/: GeoMap.tsx  SeverityBar.tsx  ThreatPie.tsx  TrendLine.tsx
apps/web/hooks/: useLiveStats.ts  useScanProgress.ts
services/scan-engine/: .env  .env.example  Dockerfile  aegisml.db  alembic.ini  cache.py  database.py  main.py  models.py  requirements.txt  startup_test.py
services/scan-engine/ai_providers/: anthropic_provider.py  base.py  google_provider.py  manager.py  ollama_provider.py  openai_provider.py
services/scan-engine/auth/: __init__.py  crypto.py  models.py  oauth.py  router.py  schemas.py  utils.py
services/scan-engine/graphql_gateway/: schema.py
services/scan-engine/migrations/: env.py
services/scan-engine/migrations/versions/: 001_initial_tables.py  002_add_auth_tables.py  a8b7202a72f3_add_webhooks_tables.py  bc03aab4ddd7_add_userapikey_model.py  c69b92c1809b_add_threat_intel_tables.py
services/scan-engine/routers/: analytics.py  developer.py  threat_intel.py  user_keys.py
services/scan-engine/scanner/: __init__.py  cvss.py  engine.py  entropy.py  gguf_scanner.py  onnx_scanner.py  patterns.py  pkl_scanner.py  safetensors_scanner.py
services/scan-engine/templates/: report.html
services/scan-engine/threat_intel/: __init__.py  cve_fetcher.py  ioc_database.py  scheduler.py
tests/: __init__.py
