[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisml"
version = "0.1.0"
description = "AI Model Malware Inspector — scans AI model files for embedded malware and suspicious patterns."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "AegisML Contributors"},
]
keywords = ["ai", "security", "malware", "gguf", "model-inspection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.scripts]
aegisml = "aegisml.cli:cli"

[project.urls]
Homepage = "https://github.com/aegisml/aegisml"
Repository = "https://github.com/aegisml/aegisml"
Issues = "https://github.com/aegisml/aegisml/issues"

[tool.setuptools.packages.find]
include = ["aegisml*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
