[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisml"
version = "1.0.0"
description = "AI Model Security Scanner — Detect malware in GGUF, SafeTensors, Pickle files"
readme = "README.md"
license = { text = "AGPL-3.0" }
authors = [{ name = "AegisML", email = "security@aegisml.vercel.app" }]
keywords = ["ai", "security", "ml", "model", "scanner", "malware", "gguf", "safetensors", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
]
requires-python = ">=3.9"
dependencies = ["httpx>=0.27.0", "anthropic>=0.40.0"]

[project.optional-dependencies]
server = ["fastapi>=0.115.0", "uvicorn>=0.30.0", "sqlalchemy[asyncio]>=2.0.0", "asyncpg>=0.30.0", "alembic>=1.14.1", "redis[hiredis]>=5.2.1", "psycopg2-binary>=2.9.10"]
dev    = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
aegisml = "aegisml.cli:main"

[project.urls]
Homepage      = "https://aegisml.vercel.app"
Repository    = "https://github.com/hasanalaaa/aegisml"
Documentation = "https://aegisml.vercel.app/docs"

[tool.setuptools.packages.find]
include = ["aegisml*"]
